[gd_scene load_steps=9 format=3 uid="uid://d3p1aytetec57"]

[ext_resource type="Script" path="res://scenes/title_screen.gd" id="1_57f5c"]
[ext_resource type="Texture2D" uid="uid://ckc6an41jyueo" path="res://title.png" id="2_dt8ko"]
[ext_resource type="Script" path="res://scripts/StartGameButton.gd" id="2_j3wqk"]
[ext_resource type="Theme" uid="uid://60ypja8w47si" path="res://title_screen_theme.tres" id="3_glr3f"]
[ext_resource type="AudioStream" uid="uid://da8dldofj621o" path="res://audio/sfx/explosion1.mp3" id="4_wjm3c"]
[ext_resource type="Texture2D" uid="uid://mwblqpw0o1h2" path="res://instructions.png" id="6_qtmi5"]

[sub_resource type="Gradient" id="Gradient_3g8yv"]
colors = PackedColorArray(1, 1, 1, 0.117647, 1, 1, 1, 0.14902)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ccito"]
gradient = SubResource("Gradient_3g8yv")
width = 1

[node name="Title Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_57f5c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("2_dt8ko")

[node name="StartGameButton" type="Button" parent="."]
layout_mode = 0
offset_left = 278.0
offset_top = 216.0
offset_right = 374.0
offset_bottom = 247.0
theme = ExtResource("3_glr3f")
text = "Start Game"
script = ExtResource("2_j3wqk")

[node name="Instructions" type="Button" parent="."]
layout_mode = 0
offset_left = 258.0
offset_top = 427.0
offset_right = 404.0
offset_bottom = 454.0
theme = ExtResource("3_glr3f")
text = "Instructions"

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 376.0
offset_right = 257.0
offset_bottom = 400.0
texture = SubResource("GradientTexture1D_ccito")

[node name="SFX Label" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 103.0
offset_top = 313.0
offset_right = 216.0
offset_bottom = 377.0
bbcode_enabled = true
text = "[rainbow]
[wave amp=120]Sound Effects[/wave]"

[node name="sfx" type="HSlider" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 367.0
offset_right = 250.0
offset_bottom = 409.0
max_value = 1.0
step = 0.05

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 374.0
offset_right = 580.0
offset_bottom = 398.0
texture = SubResource("GradientTexture1D_ccito")

[node name="Music Lable" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 313.0
offset_right = 521.0
offset_bottom = 377.0
bbcode_enabled = true
text = "[rainbow]
[wave amp=120]Music[/wave]"

[node name="music" type="HSlider" parent="."]
layout_mode = 0
offset_left = 391.0
offset_top = 366.0
offset_right = 571.0
offset_bottom = 408.0
max_value = 1.0
step = 0.05

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wjm3c")
max_polyphony = 4
bus = &"SFX"

[node name="TextureRect4" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("6_qtmi5")

[node name="Instructions2" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 260.0
offset_top = 353.0
offset_right = 406.0
offset_bottom = 380.0
theme = ExtResource("3_glr3f")
text = "Okay"

[connection signal="pressed" from="StartGameButton" to="StartGameButton" method="_on_pressed"]
[connection signal="pressed" from="Instructions" to="." method="_on_instructions_pressed"]
[connection signal="value_changed" from="sfx" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="music" to="." method="_on_music_value_changed"]
[connection signal="pressed" from="Instructions2" to="." method="_on_okay_pressed"]
